--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Age Counter</title>
 </head>
 <body>
-    <h1>Age Counter</h1>
     <div id="container">
         <div id="inputBox">
+            <div>
+                <h1><u>Age Counter</u></h1>
+            </div>
             <div id="textbox">
                 <p><b>Please enter your name:</b></p>
                 <input type="text" maxlength="15" placeholder="Name" id="name">
